<resources>
    <string name="app_name">Hypnose</string>
    <string name="applicationName">Hypnose - Détente</string>
    <string name="applicationLabel">Hypnose - Détente</string>
    <string name="applicationTag">\@LacourVincent</string>
    <string name="versionLabel">Version</string>
    <string name="versionContent">1.3.4</string>
    <string name="authorTitle">Auteur</string>
    <string name="authorLabel">Lacour Vincent</string>
    <string name="authorContent">Paris, France</string>
    <string name="emailLabel">Email</string>
    <string name="emailContent">lacour.vincent.app@gmail.com</string>
    <string name="interfaceSettingLabel">INTERFACE</string>
    <string name="interfaceNightModeLabel">Mode Jour-Nuit</string>
    <string name="descriptionLabel">Description</string>
    <string name="descriptionContent">Pour profiter pleinement des séances, nous vous conseillons de vous installer confortablement dans un endroit calme, assis ou allongé, avec un casque audio. N\'hésitez pas à lâcher-prise. Bonnes séances !</string>
    <string name="noInternetTitle">Connexion Internet nécessaire</string>
    <string name="noInternetText">Vous devez disposer d\'une connexion à Internet pour charger les séances ou bien télécharger les enregistrements en mode hors-connexion.</string>
    <string name="loadingTitle">Chargement</string>
    <string name="loadingText">Chargement de l\'enregistrement</string>
    <string name="menuSettingsLabel">Paramètres</string>
    <string name="menuInformationsLabel">Informations</string>
    <string name="agreeDialogText">Compris !</string>
    <string name="playerErrorTitle">Erreur</string>
    <string name="playerErrorText">Erreur lors du chargement de l\'enregistrement. Vous avez peut-être perdu votre connexion à Internet. Pour résoudre ce problème, vous pouvez télécharger l\'enregistrement pour l\'écouter en mode hors-connexion.</string>
    <string name="deviceErrorTitle">Erreur interne</string>
    <string name="deviceErrorText">Désolé, votre smartphone n\'est pas compatible avec l\'application.</string>
    <string name="TitleRating">Noter l\'application</string>
    <string name="TextRating">Si vous souhaitez soutenir notre travail, vous pouvez noter favorablement l\'application
                            sur le PlayStore et partager votre expérience pour les autres utilisateurs. Pour y accéder : </string>
    <string name="TextGoPlayStoreYes">Ouvrir PlayStore</string>
    <string name="TextGoPlayStoreNo">Plus tard</string>
    <string name="TextDownloadYes">Télécharger</string>
    <string name="TextDownloadNo">Plus tard</string>
    <string name="TextDownloadDelete">Supprimer</string>
    <string name="TitleDialogDownload">Téléchargement</string>
    <string name="TextDialogDownload">Vous pouvez télécharger l\'enregistrement afin de l\'écouter en mode hors connexion par la suite.\n\n%1$d Mo d\'espace libre nécessaire.</string>
    <string name="TitleDownloadNotif">Téléchargement en cours</string>
    <string name="TextDialogAlreadyDownload">Vous pouvez écouter l\'enregistrement en mode hors-connexion dès la fin du téléchargement.</string>
    <string name="TextFileAlreadyExist">Cet enregistrement a déjà été téléchargé.</string>
    <string name="TextFileDeleteDPositive">L\'enregistrement a été supprimé.</string>
    <string name="TextFileDeleteDNegative">Une erreur est survenue.</string>
    <string name="TextExceptionDownload">Le téléchargement n\'est pas compatible avec votre appareil.</string>
    <string name="TitleTrack_0">Bien dormir</string>
    <string name="FileTrack_0">3a86fd7b7a2ac22db77d62a6572e6a08.mp3</string>
    <string name="UrlTrack_0">https://yourlisten.com/filestemp/3a86fd7b7a2ac22db77d62a6572e6a08.mp3</string>
    <string name="TitleTrack_1">Retrouver le moral</string>
    <string name="FileTrack_1">b07d3c313b083f7b8114b14e330bb5fe.mp3</string>
    <string name="UrlTrack_1">https://yourlisten.com/filestemp/b07d3c313b083f7b8114b14e330bb5fe.mp3</string>
    <string name="TitleTrack_2">Préventif</string>
    <string name="FileTrack_2">870e21a5d369a195834680c239dbc486.mp3</string>
    <string name="UrlTrack_2">https://yourlisten.com/filestemp/870e21a5d369a195834680c239dbc486.mp3</string>
    <string name="TitleTrack_3">Curatif</string>
    <string name="FileTrack_3">76e7f0ec83c2473efc5d06d590c1a4d8.mp3</string>
    <string name="UrlTrack_3">https://yourlisten.com/filestemp/76e7f0ec83c2473efc5d06d590c1a4d8.mp3</string>
    <string name="TitleTrack_4">Intuition</string>
    <string name="FileTrack_4">5b51b7d87923d0d20879fba802577e36.mp3</string>
    <string name="UrlTrack_4">https://yourlisten.com/filestemp/5b51b7d87923d0d20879fba802577e36.mp3</string>
    <string name="TitleTrack_5">Réussir sa vie</string>
    <string name="FileTrack_5">1da5a457160506b95e0be41d41e32495.mp3</string>
    <string name="UrlTrack_5">https://yourlisten.com/filestemp/1da5a457160506b95e0be41d41e32495.mp3</string>
    <string name="TitleTrack_6">Confiance en soi</string>
    <string name="FileTrack_6">72842e1f87caf9977f682835ec939f34.mp3</string>
    <string name="UrlTrack_6">https://yourlisten.com/filestemp/72842e1f87caf9977f682835ec939f34.mp3</string>
    <string name="TitleTrack_7">Calmer l\'anxiété</string>
    <string name="FileTrack_7">adcc184bd1f887e41317aeafd887d0bf.mp3</string>
    <string name="UrlTrack_7">https://yourlisten.com/filestemp/adcc184bd1f887e41317aeafd887d0bf.mp3</string>
    <string name="TitleTrack_8">Soigner son passé</string>
    <string name="FileTrack_8">1f7818fe9e44d9ec2d9c3d5d9e9ccae8.mp3</string>
    <string name="UrlTrack_8">https://yourlisten.com/filestemp/1f7818fe9e44d9ec2d9c3d5d9e9ccae8.mp3</string>
    <string name="TitleTrack_9">Gérer le stress</string>
    <string name="FileTrack_9">b75bbe36a35ffadf964d37d50cec9e00.mp3</string>
    <string name="UrlTrack_9">https://yourlisten.com/filestemp/b75bbe36a35ffadf964d37d50cec9e00.mp3</string>
    <string name="TitleTrack_10">Magie intérieure</string>
    <string name="FileTrack_10">53b89341f6628afd80d8eeae97032360.mp3</string>
    <string name="UrlTrack_10">https://yourlisten.com/filestemp/53b89341f6628afd80d8eeae97032360.mp3</string>
    <string name="TitleTrack_11">Auto-Hypnose</string>
    <string name="FileTrack_11">0956b1287757ec8ba4a769b71fc1372a.mp3</string>
    <string name="UrlTrack_11">https://yourlisten.com/filestemp/0956b1287757ec8ba4a769b71fc1372a.mp3</string>
    <string name="TitleTrack_12">Estime de soi</string>
    <string name="FileTrack_12">38809e1fe8f9a45ca4cc33f3d6cf5637.mp3</string>
    <string name="UrlTrack_12">https://yourlisten.com/filestemp/38809e1fe8f9a45ca4cc33f3d6cf5637.mp3</string>
    <string name="TitleTrack_13">Bulle de ressourcement</string>
    <string name="FileTrack_13">8db902630e4c74a9a25bf2602ca69816.mp3</string>
    <string name="UrlTrack_13">https://yourlisten.com/filestemp/8db902630e4c74a9a25bf2602ca69816.mp3</string>
    <string name="TitleTrack_14">Contacter son inconscient</string>
    <string name="FileTrack_14">77d051ebd91d681120a2d9a266a0c24a.mp3</string>
    <string name="UrlTrack_14">https://yourlisten.com/filestemp/77d051ebd91d681120a2d9a266a0c24a.mp3</string>
    <string name="TitleTrack_15">Expansion de conscience</string>
    <string name="FileTrack_15">cfe5cdbc921a2ed695b290c5427bf411.mp3</string>
    <string name="UrlTrack_15">https://yourlisten.com/filestemp/cfe5cdbc921a2ed695b290c5427bf411.mp3</string>
    <string name="DescriptionTrack_0">Voici un texte composé par Patricia d\'Angeli, puis enregistré également
        par elle (l\'ambiance musicale est d\'Olivier Lockert). Comme son titre l\'indique, cet
        enregistrement est destiné à vous accompagner durant votre endormissement, soit pour
        vous aider à vous endormir, soit pour faire en sorte que votre nuit se passe bien. Vous
        avez juste à poser les écouteurs ou le casque de votre smartphone sur vos oreilles, et laisser faire. Pas
        besoin d\'écouter vraiment ou de chercher à comprendre, juste vous laisser bercer. L\'accompagnement
        musical est minimal et, comme la voix, s\'en ira progressivement afin de ne pas troubler votre sommeil.</string>
    <string name="DescriptionTrack_1">Après une introduction sautillante, cette séance vous montre ce que vous pouvez
        faire par vous-même en auto-hypnose. L\'accompagnement débute par une sorte de "ré-énergétisation" physique
        et psychologique. Ensuite, vous apprendrez à créer un "auto-ancrage" (un point réflexe) qui vous permettra de
        retrouver la forme, l\'énergie, quand vous en aurez besoin (en dehors de cette séance d\'hypnose, donc).
        Exercice à pratiquer régulièrement pour bien le comprendre. Retenez qu\'un ancrage ne s\'use que si on ne s\'en
        sert pas : plus vous pratiquerez, mieux votre ancrage fonctionnera !</string>
    <string name="DescriptionTrack_2">Cette induction a été conçue, à l\'origine, pour aider lors de l\'épidémie de grippe H1N1 de l\'hiver 2009.
        Cette enregistrement est à écouter avant l\'enregistrement "Curatif" afin de bien comprendre l\'esprit dans lequel vous mettre.
        Le texte est explicatif, avec de nombreuses métaphores. Le tout est dit assez rapidement, de manière à exciter, stimuler, vos processus psychophysiologiques.
        Texte et musique d\'Olivier Lockert.</string>
    <string name="DescriptionTrack_3">Cet accompagnement est curatif. C\'est-à-dire que vous n\'en avez
        besoin que si vous êtes malade. Le texte est dit lentementet la musique est hypnotique.
        Même si beaucoup de choses sont encore expliquées, le texte n\'est pas pour votre esprit conscient
        - donc, fermez les yeux et passez un bon moment, sans chercher à comprendre, ni même
        à écouter. S\'il vous arrive de ne plus entendre, comme si vous pensiez à autre
        chose ou comme si vous aviez dormi : c\'est parfait !</string>
    <string name="DescriptionTrack_4">Le domaine de l\'intuition est bien plus vaste qu\'il n\'y parait à première vue.
        Les personnes en meilleure santé vivent et se nourrissent intuitivement mieux que les autres. Elles ne le font
        pas exprès. Prenons l\'exemple d\'une personne à qui tout réussi, qui a de la chance : elle semble savoir
        à chaque fois quoi faire, et pourtant ce n\'est ni conscient, ni volontaire… C\'est cela,
        l\'intuition : le ressenti profond qui guide vos pas, souvent même sans que vous ne le sachiez. C\'est ce qu\'il y a de
        plus important pour vivre bien et en bonne santé, pour réussir sa vie et suivre le chemin qui a du coeur. Texte co-écrit par
        Patricia d\'Angeli et Olivier Lockert. Le fond musical est toujours d\'Olivier Lockert.</string>
    <string name="DescriptionTrack_5">Cet accompagnement en Hypnose Humaniste vous propose de travailler sur ce qui bloque éventuellement en vous,
        afin que vous soyez pleinement ouvert au monde et connecté à vous-même, intuitif et capable de marcher chaque jour sur votre meilleur chemin
        de vie. Texte et musique d\'Olivier Lockert.</string>
    <string name="DescriptionTrack_6">Le texte de cette séance est d\'Olivier Lockert et il est dit
        par Patricia d\'Angeli. Il s\'agit d\'un protocole détaillé, par explications,
        suggestions et métaphores pour (re)trouver la confiance en vous. Vous n\'aurez pas
        forcément besoin de l\'écouter souvent : la première fois peut être la bonne ! La séance
        est conçue comme un accompagnement unique.</string>
    <string name="AccessibilityIconMenu">Icon menu</string>
    <string name="AccessibilityIconRating">Icon étoile</string>
</resources>