<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundCardActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_information"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/AppTheme.Toolbar"
            app:titleTextAppearance="@style/AppTheme.Toolbar.TitleText" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_information">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardBackgroundColor="@color/colorBackgroundCard"
                card_view:contentPaddingBottom="15dp"
                card_view:contentPaddingTop="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/ic_app"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="20dp"

                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:contentDescription="@string/altIconApplication"
                        android:scaleType="center"


                        android:src="@mipmap/ic_launcher_foreground"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/app"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"

                        app:layout_constraintBottom_toBottomOf="@+id/ic_app"
                        app:layout_constraintStart_toEndOf="@+id/ic_app"
                        app:layout_constraintTop_toTopOf="@+id/ic_app"

                        >

                        <TextView
                            android:id="@+id/title_app"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/applicationLabel"
                            android:textColor="@color/colorCardLabel"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"

                            />

                        <TextView
                            android:id="@+id/author_app"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/applicationTag"
                            android:textColor="@color/colorCardContent"
                            android:textSize="14sp"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/title_app"
                            app:layout_constraintTop_toBottomOf="@+id/title_app" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <ImageView
                        android:id="@+id/ic_history"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/altIconHistory"

                        android:src="@drawable/ic_history"
                        app:layout_constraintEnd_toEndOf="@+id/ic_app"
                        app:layout_constraintStart_toStartOf="@+id/ic_app"
                        app:layout_constraintTop_toBottomOf="@+id/ic_app" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:layout_constraintBottom_toBottomOf="@+id/ic_history"
                        app:layout_constraintStart_toStartOf="@+id/app"
                        app:layout_constraintTop_toTopOf="@+id/ic_history"

                        >


                        <TextView
                            android:id="@+id/title_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/versionLabel"
                            android:textColor="@color/colorCardLabel"
                            android:textSize="16sp"
                            android:textStyle="bold"

                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"


                            />

                        <TextView
                            android:id="@+id/number_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/versionContent"
                            android:textColor="@color/colorCardContent"
                            android:textSize="14sp"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/title_version"
                            app:layout_constraintTop_toBottomOf="@+id/title_version" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_app"
                card_view:cardBackgroundColor="@color/colorBackgroundCard"
                card_view:contentPaddingBottom="15dp"
                card_view:contentPaddingTop="15dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/authorTitle"
                        android:textColor="@color/colorCardLabel"

                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ic_person"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="25dp"
                        android:contentDescription="@string/altIconPerson"

                        android:src="@drawable/ic_person"
                        app:layout_constraintEnd_toEndOf="@+id/title_author"
                        app:layout_constraintStart_toStartOf="@+id/title_author"
                        app:layout_constraintTop_toBottomOf="@+id/title_author"

                        />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_person"
                        app:layout_constraintStart_toEndOf="@+id/ic_person"
                        app:layout_constraintTop_toTopOf="@+id/ic_person"

                        >


                        <TextView
                            android:id="@+id/text_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/authorLabel"
                            android:textColor="@color/colorCardLabel"
                            android:textSize="16sp"
                            android:textStyle="bold"

                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"

                            />

                        <TextView
                            android:id="@+id/city_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/authorContent"
                            android:textColor="@color/colorCardContent"
                            android:textSize="14sp"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/text_author"
                            app:layout_constraintTop_toBottomOf="@+id/text_author" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/ic_email"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="35dp"
                        android:contentDescription="@string/altIconEmail"

                        android:src="@drawable/ic_email"
                        app:layout_constraintEnd_toEndOf="@+id/title_author"
                        app:layout_constraintStart_toStartOf="@+id/title_author"
                        app:layout_constraintTop_toBottomOf="@+id/ic_person"

                        />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_email"
                        app:layout_constraintStart_toEndOf="@+id/ic_email"
                        app:layout_constraintTop_toTopOf="@+id/ic_email"

                        >


                        <TextView
                            android:id="@+id/title_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/emailLabel"
                            android:textColor="@color/colorCardLabel"
                            android:textSize="16sp"
                            android:textStyle="bold"

                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"

                            />

                        <TextView
                            android:id="@+id/content_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/emailContent"
                            android:textColor="@color/colorCardContent"
                            android:textSize="14sp"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/title_email"
                            app:layout_constraintTop_toBottomOf="@+id/title_email" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_author"
                card_view:cardBackgroundColor="@color/colorBackgroundCard"
                card_view:contentPaddingBottom="15dp"
                card_view:contentPaddingTop="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/descriptionLabel"
                        android:textColor="@color/colorCardLabel"

                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/content_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/descriptionContent"
                        android:textColor="@color/colorCardContent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/title_description"
                        app:layout_constraintTop_toBottomOf="@+id/title_description" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>